chrisstaite-menlo.nativelink-provisioner.10f1ffcdca858eb6f83eb84df3329fea0e737fdf
Running as unit: run-p1684788-i14264896.scope; invocation ID: 9c7ba1c89015466fa85a8420369255cb
   Compiling proc-macro2 v1.0.101
   Compiling unicode-ident v1.0.19
   Compiling quote v1.0.41
   Compiling libc v0.2.177
    Checking cfg-if v1.0.4
    Checking pin-project-lite v0.2.16
    Checking memchr v2.7.6
    Checking smallvec v1.15.1
    Checking bytes v1.10.1
   Compiling serde_core v1.0.228
    Checking futures-core v0.3.31
    Checking log v0.4.28
   Compiling parking_lot_core v0.9.12
    Checking itoa v1.0.15
    Checking scopeguard v1.2.0
    Checking lock_api v0.4.14
   Compiling serde v1.0.228
    Checking once_cell v1.21.3
    Checking stable_deref_trait v1.2.1
    Checking futures-sink v0.3.31
   Compiling autocfg v1.5.0
   Compiling find-msvc-tools v0.1.4
   Compiling syn v2.0.106
   Compiling shlex v1.3.0
   Compiling version_check v0.9.5
   Compiling cc v1.2.41
   Compiling num-traits v0.2.19
    Checking futures-channel v0.3.31
    Checking pin-utils v0.1.0
    Checking fnv v1.0.7
    Checking slab v0.4.11
    Checking http v1.3.1
    Checking socket2 v0.6.1
    Checking parking_lot v0.12.5
    Checking mio v1.0.4
    Checking signal-hook-registry v1.4.6
    Checking getrandom v0.2.16
    Checking tracing-core v0.1.34
    Checking zeroize v1.8.2
    Checking futures-task v0.3.31
    Checking futures-io v0.3.31
   Compiling crossbeam-utils v0.8.21
    Checking ryu v1.0.20
   Compiling serde_json v1.0.145
    Checking rustls-pki-types v1.12.0
   Compiling ring v0.17.14
    Checking http-body v1.0.1
    Checking untrusted v0.9.0
   Compiling zerocopy v0.8.27
   Compiling httparse v1.10.1
   Compiling ucd-trie v0.1.7
   Compiling typenum v1.19.0
    Checking tower-service v0.3.3
    Checking try-lock v0.2.5
   Compiling rustls v0.23.32
    Checking writeable v0.6.1
    Checking litemap v0.8.0
    Checking want v0.3.1
   Compiling pest v2.8.3
   Compiling generic-array v0.14.9
    Checking base64 v0.22.1
   Compiling icu_properties_data v2.0.1
    Checking percent-encoding v2.3.2
   Compiling thiserror v2.0.17
   Compiling icu_normalizer_data v2.0.0
    Checking atomic-waker v1.1.2
    Checking subtle v2.6.1
   Compiling thiserror v1.0.69
    Checking form_urlencoded v1.2.2
    Checking aho-corasick v1.1.3
   Compiling pest_meta v2.8.3
    Checking either v1.15.0
    Checking equivalent v1.0.2
   Compiling getrandom v0.3.4
   Compiling k8s-openapi v0.26.0
    Checking regex-syntax v0.8.8
    Checking openssl-probe v0.1.6
    Checking rustls-native-certs v0.8.2
    Checking concurrent-queue v2.5.0
   Compiling synstructure v0.13.2
   Compiling pest_generator v2.8.3
    Checking ordered-float v2.10.1
    Checking hashbrown v0.16.0
    Checking parking v2.2.1
    Checking regex-automata v0.4.13
    Checking tower-layer v0.3.3
    Checking event-listener v5.4.1
    Checking rustls-webpki v0.103.7
    Checking indexmap v2.11.4
   Compiling ahash v0.8.12
   Compiling crc16 v0.4.0
   Compiling serde_derive v1.0.228
   Compiling zerofrom-derive v0.1.6
   Compiling tokio-macros v2.6.0
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
    Checking tokio v1.48.0
   Compiling displaydoc v0.2.5
   Compiling futures-macro v0.3.31
   Compiling tracing-attributes v0.1.30
    Checking zerofrom v0.1.6
    Checking yoke v0.8.0
    Checking zerovec v0.11.4
    Checking futures-util v0.3.31
    Checking tracing v0.1.41
    Checking zerotrie v0.2.2
   Compiling thiserror-impl v2.0.17
    Checking tinystr v0.8.1
    Checking icu_locale_core v2.0.0
    Checking potential_utf v0.1.3
    Checking icu_collections v2.0.0
    Checking icu_provider v2.0.0
   Compiling thiserror-impl v1.0.69
    Checking jsonptr v0.7.1
    Checking chrono v0.4.42
   Compiling derive_more-impl v2.0.1
    Checking icu_properties v2.0.1
    Checking futures-executor v0.3.31
    Checking futures v0.3.31
    Checking icu_normalizer v2.0.0
    Checking serde-value v0.7.0
    Checking json-patch v4.1.0
    Checking regex v1.12.2
   Compiling enum-ordinalize-derive v4.3.1
   Compiling pest_derive v2.8.3
    Checking derive_more v2.0.1
    Checking hyper v1.7.0
    Checking tokio-util v0.7.16
    Checking tokio-rustls v0.26.4
    Checking sync_wrapper v1.0.2
    Checking bitflags v2.9.4
    Checking unsafe-libyaml v0.2.11
    Checking mime v0.3.17
   Compiling enum-ordinalize v4.3.0
    Checking tower-http v0.6.6
    Checking jsonpath-rust v0.7.5
    Checking tower v0.5.2
    Checking hyper-util v0.1.17
    Checking serde_yaml v0.9.34+deprecated
    Checking idna_adapter v1.2.1
   Compiling async-stream-impl v0.3.6
   Compiling pin-project-internal v1.1.10
    Checking event-listener-strategy v0.5.4
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking ppv-lite86 v0.2.21
    Checking pem v3.0.6
    Checking http-body-util v0.1.3
    Checking secrecy v0.10.3
    Checking rand_core v0.6.4
    Checking inotify-sys v0.1.5
    Checking minimal-lexical v0.2.1
    Checking fastrand v2.3.0
    Checking bitflags v1.3.2
    Checking foldhash v0.1.5
    Checking same-file v1.0.6
    Checking allocator-api2 v0.2.21
    Checking home v0.5.11
    Checking utf8_iter v1.0.4
    Checking idna v1.1.0
    Checking walkdir v2.5.0
    Checking pin-project v1.1.10
    Checking nom v7.1.3
    Checking hyper-rustls v0.27.7
    Checking hyper-timeout v0.5.2
    Checking hashbrown v0.15.5
    Checking backon v1.5.2
    Checking inotify v0.9.6
    Checking rand_chacha v0.3.1
    Checking async-stream v0.3.6
    Checking digest v0.10.7
    Checking async-broadcast v0.7.2
   Compiling educe v0.6.0
    Checking bytes-utils v0.1.4
    Checking crossbeam-channel v0.5.15
    Checking hostname v0.4.1
    Checking mio v0.8.11
    Checking filetime v0.2.26
    Checking cpufeatures v0.2.17
    Checking bytemuck v1.24.0
    Checking lazy_static v1.5.0
    Checking cookie-factory v0.3.2
    Checking notify v6.1.1
    Checking atomic v0.6.1
    Checking sharded-slab v0.1.7
    Checking sha-1 v0.10.1
    Checking rand v0.8.5
    Checking url v2.5.7
    Checking tokio-stream v0.1.17
   Compiling fred-macros v0.1.0
   Compiling async-trait v0.1.89
    Checking float-cmp v0.10.0
    Checking tracing-log v0.2.0
    Checking socket2 v0.5.10
    Checking thread_local v1.1.9
    Checking humantime v2.3.0
    Checking redis-protocol v6.0.0
    Checking urlencoding v2.1.3
    Checking nu-ansi-term v0.50.3
    Checking file-id v0.2.3
    Checking semver v1.0.27
    Checking arc-swap v1.7.1
    Checking notify-debouncer-full v0.3.2
    Checking tracing-subscriber v0.3.20
    Checking humantime-serde v1.1.1
    Checking uuid v1.18.1
    Checking fred v10.1.0
    Checking kube-core v2.0.1
    Checking kube-client v2.0.1
    Checking kube-runtime v2.0.1
    Checking kube v2.0.1
error[E0275]: overflow evaluating the requirement `{async block@/home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/fred-10.1.0/src/runtime/_tokio.rs:299:18: 299:28}: std::marker::Send`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/fred-10.1.0/src/runtime/_tokio.rs:299:5
    |
299 | /     tokio::spawn(async move {
300 | |       inner.backchannel.clear_router_state(&inner).await;
301 | |       let result = router_commands::start(&inner).await;
...   |
312 | |       result
313 | |     })
    | |______^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`fred`)
note: required by a bound in `tokio::spawn`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/tokio-1.48.0/src/task/spawn.rs:171:21
    |
169 |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
    |            ----- required by a bound in this function
170 |     where
171 |         F: Future + Send + 'static,
    |                     ^^^^ required by this bound in `spawn`

For more information about this error, try `rustc --explain E0275`.
error: could not compile `fred` (lib) due to 1 previous error
